docs: update README with WIP banner and roadmap

--- a/01_exploration_and_schema.ipynb
+++ b/01_exploration_and_schema.ipynb
@@ -27,7 +27,12 @@
     "The analyses in this notebook use **static CSV snapshots downloaded on the dates above**.  \n",
     "No live data connections or automated updates are used. These snapshots are analyzed to \n",
     "understand data structure, quality, and analytical feasibility prior to building a \n",
-    "natural-language analytics interface.\n"
+    "natural-language analytics interface.\n",
+    "\n",
+    "\n",
+    "Future iterations of this project could integrate the Syracuse Open Data API\n",
+    "to periodically refresh datasets as new records are published.\n",
+    "\n"
    ]
   },
   {
